// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search 基础快照 1`] = `
<div>
  <form>
    <div
      class="corn-search corn-f corn-ac corn-search-undefined"
    >
      <div
        class="corn-search-input-box corn-f corn-ac"
        data-testid="search-box"
      >
        <i
          class="corn-search-icon corn-icon corn-i-search"
        />
        <div
          class="corn-search-input"
        />
        <div />
        <div />
        <button
          class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 基础快照 light 1`] = `
<div>
  <form>
    <div
      class="corn-search corn-f corn-ac corn-search-light"
    >
      <div
        class="corn-search-input-box corn-f corn-ac"
        data-testid="search-box"
      >
        <i
          class="corn-search-icon corn-icon corn-i-search"
        />
        <div
          class="corn-search-input"
        />
        <div />
        <div />
        <button
          class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 插入尾部内容 1`] = `
<div>
  <form>
    <div
      class="corn-search corn-f corn-ac corn-search-undefined"
    >
      <div
        class="corn-search-input-box corn-f corn-ac"
        data-testid="search-box"
      >
        <i
          class="corn-search-icon corn-icon corn-i-search"
        />
        <div
          class="corn-search-input"
        />
        <div />
        <div />
        <button
          class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
      <div
        class="corn-search-suffix corn-f xkr-ac"
      >
        <div>
          打卡
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Search 设置提示语列表 1`] = `
<div>
  <form>
    <div
      class="corn-search corn-f corn-ac corn-search-undefined"
    >
      <div
        class="corn-search-input-box corn-f corn-ac"
        data-testid="search-box"
      >
        <i
          class="corn-search-icon corn-icon corn-i-search"
        />
        <input
          autocomplete="off"
          class="weui-input corn-search-input corn-input"
          confirmtype="search"
          data-testid="input"
          name="value"
          type="search"
          value=""
        />
        <div>
          <div
            class="corn-search-placeholder"
          >
            <div
              class="corn-search-placeholder-list"
            >
              <div
                class="corn-search-placeholder-item corn-f corn-ac"
              >
                常青藤爸爸
              </div>
              <div
                class="corn-search-placeholder-item corn-f corn-ac"
              >
                @Corn
              </div>
              <div
                class="corn-search-placeholder-item corn-f corn-ac"
              >
                请输入关键字搜索
              </div>
            </div>
          </div>
        </div>
        <div />
        <button
          class="corn-btn corn-if corn-ac corn-jc corn-btn-middle corn-btn-primary corn-search-btn"
          data-testid="search-btn"
          type="submit"
        >
          搜索
        </button>
      </div>
    </div>
  </form>
</div>
`;
